21030915 - fhabermann
* enabled timezone handling for user in Knowledgeroot_Date
* added timezone to user session

20130913 - fhabermann
* added js to print content on open print window
* added show content action with template
* added loading version support to Knowledgeroot_Content
* added class Knowledgeroot_Db_Content_History
* added show version features to template
* added routes to show content and show versions

20130820 - fhabermann
* saving memberships

20130819 - fhabermann
* show inverse members in memberpanel

20130818 - fhabermann
* added memberpanel to group edit

20130810 - fhabermann
* added memberpanel

20130726 - fhabermann
* removed unused scripts
* doing translations

20130722 - fhabermann
* load all locales and show translation name

20130720 - fhabermann
* fixed not working change language
* added first german translation

20130719 - fhabermann
* added first stuff for memberpanel
* composer update

20130614 - fhabermann
* add home link to breadcrumb
* set light grey background
* add seperate pagetitle and subtitle
* added font awesome and changed icons

20130612 - fhabermann
* added some metro styles to navbar

20130603 - fhabermann
* added acl checks to file controller

20130602 - fhabermann
* added server side acl check to page and content controller

20130528 - fhabermann
* added save acl for page new and edit
* added acl check on getContents
* added acl check on getPages
* getPages returns array of Page objects
* redirect to page itself if root page is created
* added more rights to dump
* added more stuff to demp dumps
* added acl checks to navis

20130527 - fhabermann
* added save acl for content new and edit

20130524 - fhabermann
* bootstrap update to version 2.3.2
* dojo upgrade to 1.9.0
* jquery upgrade to 1.10.0

20130410 - fhabermann
* added acl to demo dump
* using tinyint in mysql instead of boolean
* fixed problems with true/false in mysql

20130407 - fhabermann
* added more acl checks

20130406 - fhabermann